[gd_scene load_steps=16 format=4 uid="uid://dwlfn2l5as1kx"]

[ext_resource type="Script" uid="uid://bfpmeme0glgng" path="res://scenes/room/room.gd" id="1_cy34l"]
[ext_resource type="PackedScene" uid="uid://ch4ywalnwhk3v" path="res://scenes/room/dogs/white-dog.tscn" id="2_j33j0"]
[ext_resource type="Script" uid="uid://dyj3yynr8lg8n" path="res://scenes/room/tiles/floor_layer.gd" id="2_tku2a"]
[ext_resource type="Texture2D" uid="uid://fhwsqqgw1t27" path="res://scenes/room/tiles/floor-tiles.png" id="3_lbx1e"]
[ext_resource type="Theme" uid="uid://cnld8djuw1qpf" path="res://themes/main_theme.tres" id="5_fntg6"]
[ext_resource type="AudioStream" uid="uid://bdrpodbxf1ukf" path="res://music/Matcha Green Tea.mp3" id="5_qx3y5"]
[ext_resource type="Texture2D" uid="uid://2j1lixeg62or" path="res://shared/images/stripes.png" id="6_et4wo"]
[ext_resource type="Texture2D" uid="uid://4wxa2b4ntjwr" path="res://scenes/room/tiles/wall-tiles.png" id="6_lbx1e"]
[ext_resource type="Script" uid="uid://bv46cnrqklwkm" path="res://scenes/room/tiles/wall_layer.gd" id="7_68b7a"]
[ext_resource type="Texture2D" uid="uid://dahb8dhbdcccw" path="res://icons/pause-button.png" id="7_et4wo"]
[ext_resource type="Script" uid="uid://brcsmpvmsspgu" path="res://scenes/room/decoration/drag-drop-decoration.gd" id="9_ip1yl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0i02g"]
texture = ExtResource("3_lbx1e")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
39:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.1646, -0.610477, 0, 8, 16.2838, -0.555972, 0, -8, 0, -8)

[sub_resource type="TileSet" id="TileSet_wid0f"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 16)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_0i02g")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wid0f"]
texture = ExtResource("6_lbx1e")
texture_region_size = Vector2i(32, 64)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 16)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 16)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 16)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 16)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 16)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, 16)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, 16)
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, 16)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, 16)
9:0/0 = 0
9:0/0/texture_origin = Vector2i(0, 16)
10:0/0 = 0
10:0/0/texture_origin = Vector2i(0, 16)
11:0/0 = 0
11:0/0/texture_origin = Vector2i(0, 16)
12:0/0 = 0
12:0/0/texture_origin = Vector2i(0, 16)
13:0/0 = 0
13:0/0/texture_origin = Vector2i(0, 16)
14:0/0 = 0
14:0/0/texture_origin = Vector2i(0, 16)
15:0/0 = 0
15:0/0/texture_origin = Vector2i(0, 16)
16:0/0 = 0
16:0/0/texture_origin = Vector2i(0, 16)
17:0/0 = 0
17:0/0/texture_origin = Vector2i(0, 16)
18:0/0 = 0
18:0/0/texture_origin = Vector2i(0, 16)
19:0/0 = 0
19:0/0/texture_origin = Vector2i(0, 16)
20:0/0 = 0
20:0/0/texture_origin = Vector2i(0, 16)
21:0/0 = 0
21:0/0/texture_origin = Vector2i(0, 16)
22:0/0 = 0
22:0/0/texture_origin = Vector2i(0, 16)
23:0/0 = 0
23:0/0/texture_origin = Vector2i(0, 16)
24:0/0 = 0
24:0/0/texture_origin = Vector2i(0, 16)
25:0/0 = 0
25:0/0/texture_origin = Vector2i(0, 16)
26:0/0 = 0
26:0/0/texture_origin = Vector2i(0, 16)
27:0/0 = 0
27:0/0/texture_origin = Vector2i(0, 16)
28:0/0 = 0
28:0/0/texture_origin = Vector2i(0, 16)
29:0/0 = 0
29:0/0/texture_origin = Vector2i(0, 16)
30:0/0 = 0
30:0/0/texture_origin = Vector2i(0, 16)
31:0/0 = 0
31:0/0/texture_origin = Vector2i(0, 16)
32:0/0 = 0
32:0/0/texture_origin = Vector2i(0, 16)
33:0/0 = 0
33:0/0/texture_origin = Vector2i(0, 16)
34:0/0 = 0
34:0/0/texture_origin = Vector2i(0, 16)
35:0/0 = 0
35:0/0/texture_origin = Vector2i(0, 16)
36:0/0 = 0
36:0/0/texture_origin = Vector2i(0, 16)
37:0/0 = 0
37:0/0/texture_origin = Vector2i(0, 16)
38:0/0 = 0
38:0/0/texture_origin = Vector2i(0, 16)
39:0/0 = 0
39:0/0/texture_origin = Vector2i(0, 16)

[sub_resource type="TileSet" id="TileSet_cy34l"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(32, 16)
sources/0 = SubResource("TileSetAtlasSource_wid0f")

[node name="Room" type="Node2D"]
script = ExtResource("1_cy34l")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -30)
zoom = Vector2(3.25, 3.25)

[node name="TextureRect" type="TextureRect" parent="Camera2D"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -197.0
offset_top = -141.0
offset_right = 2955.0
offset_bottom = 1635.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.125, 0.125)
texture = ExtResource("6_et4wo")
stretch_mode = 1

[node name="FloorLayer" type="TileMapLayer" parent="Camera2D"]
z_index = 2
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD+/wAAAgACAAAAAAD+////AgACAAAAAAD/////AgACAAAAAAAAAAAAAgACAAAAAAD//wEAAgACAAAAAAD//wIAAgACAAAAAAD+/wEAAgACAAAAAAD//wAAAgACAAAAAAAAAAEAAgACAAAAAAAAAAIAAgACAAAAAAAAAP//AgACAAAAAAABAP//AgACAAAAAAABAAAAAgACAAAAAAABAAEAAgACAAAAAAABAAIAAgACAAAAAAD+/wIAAgACAAAAAAA=")
tile_set = SubResource("TileSet_wid0f")
script = ExtResource("2_tku2a")

[node name="White-dog" parent="Camera2D/FloorLayer" instance=ExtResource("2_j33j0")]
position = Vector2(-6, -4)

[node name="WallLayer" type="TileMapLayer" parent="Camera2D"]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD9/wIAAAACAAAAAAD9/wEAAAACAAAAAAD9/wAAAAACAAAAAAD9////AAACAAAAAAD9//7/AAACAAAAAAD+//7/AAACAAAAAAD///7/AAACAAAAAAAAAP7/AAACAAAAAAABAP7/AAACAAAAAAA=")
tile_set = SubResource("TileSet_cy34l")
script = ExtResource("7_68b7a")

[node name="MatchaGreenTea" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource("5_qx3y5")
autoplay = true
parameters/looping = true

[node name="OptionsContainer" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 96.0
offset_top = -142.0
offset_right = 198.0
offset_bottom = -115.0
script = ExtResource("9_ip1yl")

[node name="EditButton" type="Button" parent="Camera2D/OptionsContainer"]
offset_left = 17.0
offset_top = 6.0
offset_right = 205.0
offset_bottom = 71.0
scale = Vector2(0.25, 0.25)
theme = ExtResource("5_fntg6")
text = "EDIT"

[node name="PauseButton" type="Button" parent="Camera2D/OptionsContainer"]
offset_left = 69.0
offset_top = 6.0
offset_right = 221.0
offset_bottom = 110.0
scale = Vector2(0.157, 0.157)
theme = ExtResource("5_fntg6")
icon = ExtResource("7_et4wo")
icon_alignment = 1

[node name="DragsContainer" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 90.0
offset_top = -97.0
offset_right = 190.0
offset_bottom = 53.0

[node name="FloorItemsContainer" type="ScrollContainer" parent="Camera2D/DragsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Camera2D/DragsContainer/FloorItemsContainer"]
layout_mode = 2
columns = 2

[node name="WallItemsContainer" type="ScrollContainer" parent="Camera2D/DragsContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Camera2D/DragsContainer/WallItemsContainer"]
layout_mode = 2
columns = 2

[connection signal="ready" from="Camera2D" to="Camera2D" method="_on_ready"]
[connection signal="pressed" from="Camera2D/OptionsContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="Camera2D/OptionsContainer/PauseButton" to="." method="_on_pause_button_pressed"]
